--- a/Attachment/Views/_ViewImports.cshtml
+++ b/Attachment/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using Attachment
 @using Attachment.Models
+@using jQWidgets.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, jQWidgets.AspNetCore.Mvc.TagHelpers
+@*@inject Microsoft.ApplicationInsights.Extensibility.TelemetryConfiguration TelemetryConfiguration*@
