--- a/Attachment/Views/Home/Index.cshtml
+++ b/Attachment/Views/Home/Index.cshtml
@@ -1,8 +1,21 @@
-﻿@{
+﻿@model IEnumerable<Attachment.Models.Employee>
+@{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    @using (Html.BeginForm("Home", "Employee", FormMethod.Post))
+    {
+        <div>
+            <table>
+                <tr>
+                    <td>@Html.DisplayNameFor(model => model.EmployeeId)</td>
+                    <td></td>
+                </tr>
+            </table>
+        </div>
+    }
+
 </div>
